fixed layout issues

--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -10,10 +10,10 @@ body {
 
 		min-width: 150px;
 		max-width: 200px;
-        height: 100%;
-        padding-top: 60px;
+        height: calc(100% - 60px);
+        margin-top: 60px;
 
-		background-color: $white;
+		background-color: white;
 		border-right: 1px solid rgba($black, .1);
 	}
 
